fix map not showing error (accidentally committed refactor in previous commit oops)

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,12 @@
-#map { height: 100vh; }
+#map { 
+  height: 100vh; 
+  width: 100%;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
 
 #search-icon{
     position: absolute;
